fix(cli): address resume routing review feedback